# space-explorer-7drl

./: Cargo.toml
data/core/: ships.json
src/: colors.rs  game.rs  input.rs  main.rs  world.rs
src/assets/: fonts.rs  mod.rs  tileset.rs
src/data/: entity.rs  game_data.rs  mod.rs  names_pack.rs  ship_class.rs
src/data/ship_parts/: activation.rs  mod.rs  parts.rs  traits.rs
src/map/: mod.rs  player.rs  ship.rs
src/scenes/: main_menu.rs  mod.rs  scene.rs  scene_event.rs  ship_walk.rs
src/states/: main_menu.rs  mod.rs  ship_walk.rs
src/ui/: label.rs  mod.rs  position.rs  ship.rs  sprite.rs  tile.rs  zoom.rs
