[package]
name = "scfi-roguelike-7drl"
version = "0.1.0"
edition = "2021"

[dependencies.tetra]
version = "0.8"
default-features = false
features = ["serde_support", "texture_png", "texture_jpeg", "font_ttf"]

[dependencies]
# my small library for roguelikes' geometry
geometry = { git = "https://github.com/Tairesh/geometry.git", features = ["serde", "rand"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enum_dispatch = "0.3"
